# Raptor

./: .gitignore  Cargo.toml  DEVELOPMENT_NOTES.md  DEVELOPMENT_PLAN.md  HPC_INSTRUCTIONS.md  ISOFORM_README.md  OPTIMIZATIONS.md  README.md  REASME.md  USAGE.md  compile_hpc.sh  create_test_data.sh  low_memory_run.sh  memory_normalize.csv  monitor_hpc.sh  monitor_memory.sh  process_cxt_data.sh  raptor_hpc.sh  run_assemble_with_isoforms.sh  test_features.sh  test_memory_optimized.sh  test_with_real_data.sh
bench/: README.md
bench/genome_assembly/: README.md  download_data.sh  environment.yml  quick_benchmark.sh  render_comparison_report.py  run_benchmark.sh  setup_environment.sh  summarize_results.py
benches/: isoform_paths.rs  kmer_counting.rs  overlap_detection.rs
docs/: genome-benchmark-comparison.md  genome-benchmark-report.md  raptor-architecture-roadmap.md
examples/: README.md  repomix_yeast.sh  traverse_paths.rs
scripts/: assemble_and_visualize.sh  graph_viz_demo.sh  run_path_traversal.sh
src/: cli_main.rs  lib.rs  main.rs  new_function.rs  stats.rs  xauth_XsPTqn
src/accel/: backend.rs  cpu_backend.rs  gpu.rs  gpu_backend.rs  mod.rs  simd.rs
src/cli/: benchmark.rs  mod.rs  stats.rs
src/eval/: gtf_compare.rs  metrics.rs  mod.rs
src/gpu/: kmer_encode.rs  kmer_gpu.rs  mod.rs  overlap_gpu.rs
src/gpu/kernels/: count_kmers.cl  count_kmers_nthash.cl  count_kmers_v2.cl  overlap.cl
src/graph/: assembler.rs  complexity.rs  edge_weight.rs  isoform_filter.rs  isoform_graph.rs  isoform_parallel.rs  isoform_traverse.rs  mod.rs  navigation.rs  overlap.rs  partition.rs  polish.rs  simplify.rs  stats.rs  stitch.rs  transcript.rs  traverser.rs
src/io/: export.rs  fasta.rs  fastq.rs  gfa.rs  gfa2.rs  gfa_utils.rs  gff3.rs  gtf.rs  isoform_runner.rs  longread.rs  metadata.rs  mod.rs  odgi.rs  sam.rs  transcript_io.rs
src/kmer/: bloom.rs  cms.rs  disk_counting.rs  disk_counting_optimized.rs  disk_counting_v2.rs  kmer.rs  minimizer.rs  mod.rs  normalize.rs  nthash.rs  repeat.rs  rle.rs  superkmer.rs  variable_k.rs
src/pipeline/: assemble.rs  isoform_processor.rs  isoform_processor.rs.bak  large_genome_assembler.rs  long_read_integration.rs  mod.rs  normalize.rs  polisher.rs  scaffolder.rs  streaming_assembly.rs
src/polish/: align.rs  longread.rs  mod.rs
src/quant/: align_counts.rs  diffexp.rs  matrix.rs  mod.rs  tpm.rs
src/visualize/: mod.rs  pca.rs  plot.rs
test_data/: large_queries.txt  large_results.csv  large_targets.txt  overlap_queries.txt  overlap_results.csv  overlap_targets.txt  queries.txt  results.csv  targets.txt
tests/: greedy.rs  polish.rs  repeat.rs  simd.rs
