[package]
name = "raptor"
version = "0.1.0"
edition = "2021"
description = "A blazing-fast, parallel, graph-based RNA-Seq assembler"
authors = ["Jacob Lamb <jacob.lamb@example.com>"]
license = "MIT"
repository = "https://github.com/Jakeelamb/Raptor.git"
default-run = "raptor"

# Define features
[features]
default = []
gpu = ["ocl"]

[dependencies]
bio = "1.6.0"
gfa = "0.10.1"
log = "0.4.19"
rayon = "1.10.0"
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.10.2"
petgraph = { version = "0.7.1", features = ["graphmap" ]}
flate2 = "1.0.28"
ahash = "0.8.6"
fasthash = "0.4.0"
crossbeam = "0.8.4"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
plotters = "0.3.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tempfile = "3.10.1"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.105"
rand = "0.8.5"
num_cpus = "1.16.0"

# Replaced with our own implementations
# linfa = "0.6.1"
# linfa-reduction = "0.6.1"

# Optional dependencies
ocl = { version = "0.19.6", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kmer_counting"
harness = false

[[bench]]
name = "overlap_detection"
harness = false

[[bench]]
name = "isoform_paths"
harness = false

[[bin]]
name = "raptor"
path = "src/main.rs"

[[bin]]
name = "normalize_paired_reads"
path = "src/bin/normalize_paired_reads.rs"

[[bin]]
name = "count_gpu"
path = "src/bin/count_gpu.rs"

[[bin]]
name = "assemble"
path = "src/bin/assemble.rs"
